DAOs refactorized to JPA